<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_login"
    android:orientation="vertical"
    android:clipChildren="false">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/logo_card"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginBottom="40dp"
            app:cardBackgroundColor="#7fFF5252"
            app:cardCornerRadius="26dp"
            app:cardElevation="1dp">

            <TextView
                android:id="@+id/logo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/logo_text"
                android:textColor="#fff"
                android:textSize="32sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#7fFF5252"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <android.support.v7.widget.CardView
                android:layout_width="220dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#00ffffff"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="12sp" />
            </android.support.v7.widget.CardView>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="250dp"
            android:layout_height="40dp"
            app:cardBackgroundColor="#7fFF5252"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <android.support.v7.widget.CardView
                android:layout_width="220dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#00ffffff"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="12sp" />
            </android.support.v7.widget.CardView>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/forgot_pass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/forgot_password"
            android:textColor="#f2FFFFFF"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/login_button"
            style="@style/TextAppearance.AppCompat.Display3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="#ccFF5252"
            android:textSize="60dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginEnd="-300dp"
            app:cardBackgroundColor="@color/colorRegisterDark"
            app:cardCornerRadius="35dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="60dp"
                android:paddingStart="27dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/or"
                    android:textColor="#5cffffff"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>
