<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_register"
    android:orientation="vertical"
    android:clipChildren="false">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginBottom="30dp"
            app:cardBackgroundColor="#7f0b1039"
            app:cardCornerRadius="26dp"
            app:cardElevation="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/logo_text"
                android:textColor="#fff"
                android:textSize="32sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#7f0b1039"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <android.support.v7.widget.CardView
                android:layout_width="220dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#00ffffff"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/register_username"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="12sp" />
            </android.support.v7.widget.CardView>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#7f0b1039"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <android.support.v7.widget.CardView
                android:layout_width="220dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#00ffffff"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="12sp" />
            </android.support.v7.widget.CardView>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="250dp"
            android:layout_height="40dp"
            app:cardBackgroundColor="#7f0b1039"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <android.support.v7.widget.CardView
                android:layout_width="220dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#00ffffff"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/register_password_again"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/password_again"
                    android:inputType="textPassword"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="12sp" />
            </android.support.v7.widget.CardView>
        </android.support.v7.widget.CardView>



        <TextView
            android:id="@+id/register_button"
            style="@style/TextAppearance.AppCompat.Display3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textColor="#990b1039"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center_vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="-50dp"
        app:cardBackgroundColor="@color/colorLoginDark"
        app:cardCornerRadius="35dp"
        app:cardElevation="0dp"
        android:id="@+id/button_login">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingEnd="27dp"
            android:paddingStart="60dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/or"
                android:textColor="#99111111"
                android:textStyle="bold" />

            <TextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#111"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>
